moved around the connection and query to iptables so that it will get looked up each time a request is made

--- a/banned.gohtml
+++ b/banned.gohtml
@@ -12,6 +12,7 @@
     <li>{{ . }}</li>
     {{ end }}
 </ul>
+<p>If your clients IP is listed above they will not be able to connect to this server.</p>
 
 </body>
 </html>
