Adding CLI options to set port and chain

--- a/banned.gohtml
+++ b/banned.gohtml
@@ -13,6 +13,7 @@
     {{ end }}
 </ul>
 <p>If your clients IP is listed above they will not be able to connect to this server.</p>
+<p>You can open up a <a href="https://redmine.plansource.com/issues/new" target="_blank">Redmine</a> ticket with the Devops group to investigate further why they are being blocked.</p>
 
 </body>
 </html>
