--- a/banned.gohtml
+++ b/banned.gohtml
@@ -9,10 +9,10 @@
 <h1>IPs currently banned:</h1>
 <ul>
     {{ range . }}
-    <li>{{ . }}</li>
+    <li><a href="https://search.arin.net/rdap/?query={{.}}" target="_blank" title="Click link for IP ownership information">{{ . }}</a></li>
     {{ end }}
 </ul>
-<p>If your clients IP is listed above they will not be able to connect to this server.</p>
+<p>If an IP address is listed above they will be blocked from connecting to this server</p>
 <p>You can open up a <a href="https://redmine.plansource.com/projects/devops/issues/new" target="_blank">Redmine</a> ticket with the Devops group to investigate further why they are being blocked.</p>
 
 </body>
