updating unban ability

--- a/unban.gohtml
+++ b/unban.gohtml
@@ -1,3 +1,12 @@
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Un ban IP</title>
+    <link rel="stylesheet" href="static/style.css">
+</head>
+<body>
+
 {{if .Success}}
   <h1>IP was removed from the ban list</h1>
 {{else}}
@@ -7,3 +16,6 @@
     <input type="text" name="ip"><br />
   </form>
 {{end}}
+
+</body>
+</html>
