adding link on main page to unban

--- a/banned.gohtml
+++ b/banned.gohtml
@@ -12,7 +12,7 @@
     <li><a href="https://search.arin.net/rdap/?query={{.}}" target="_blank" title="Click link for IP ownership information">{{ . }}</a></li>
     {{ end }}
 </ul>
-<p>If an IP address is listed above they will be blocked from connecting to this server</p>
+<p><a href="/unban">Click here to unban an IP</a>
 <p>You can open up a <a href="https://redmine.plansource.com/projects/devops/issues/new" target="_blank">Redmine</a> ticket with the Devops group to investigate further why they are being blocked.</p>
 
 </body>
